--- a/index.html
+++ b/index.html
@@ -3,16 +3,42 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Me RenAIssant</title>
+  <meta name="description"
+    content="Step into conversation with your Renaissance doppelganger! Me RenAIssant invites you to play chess, tic-tac-toe, and glyphs while exchanging wit, wisdom, and lively banter with your AI self from another era." />
+  <meta name="keywords"
+    content="AI, chess, tic-tac-toe, glyphs, games, Renaissance, conversation, doppelganger, chat, analysis, commentary, web app, play, fun" />
+  <meta name="author" content="Me RenAIssant Team" />
+  <meta name="theme-color" content="#2d1b0e" />
+  <meta name="color-scheme" content="dark light" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Me RenAIssant" />
+  <meta property="og:description"
+    content="Converse and compete with your Renaissance doppelganger! Play chess, tic-tac-toe, and glyphs, and enjoy insightful analysis and playful repartee with your AI self." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://merenai.com/" />
+  <meta property="og:image" content="/og-image.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Me RenAIssant" />
+  <meta name="twitter:description"
+    content="Converse and compete with your Renaissance doppelganger! Play chess, tic-tac-toe, and glyphs, and enjoy insightful analysis and playful repartee with your AI self." />
+  <meta name="twitter:image" content="/og-image.png" />
+
   <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Me RenAIssant</title>
+  <link rel="manifest" href="/site.webmanifest" />
 </head>
 
 <body>
   <div id="root"></div>
-  <a href="https://bolt.new/" target="_blank">
+  <a href="https://bolt.new/" target="_blank" rel="noopener noreferrer">
     <img src="/bolt-logo.png" alt="Bolt-logo" width="48" height="48" id="bolt">
   </a>
   <script type="module" src="/src/main.tsx"></script>
